# esp32_rtos

./: .gitignore  README.md
creative/: CMakeLists.txt
creative/components/cmd_leds/: led_commands.h
creative/components/custom_error_functions/: error_functions.c  error_functions.h
creative/components/dht11/: CMakeLists.txt  dht_11.c  dht_11.h  dht_measuring_tsk.c
creative/components/my_lib_func/: ft_free_array_strings.c  libft.h
creative/components/oled/: oled_functions.c  oled_init.c
creative/components/speaker/: CMakeLists.txt  speaker.c  speaker.h
creative/components/structs/: structs.h
creative/components/timer/: cmd_time.c  cstm_timer.h  timer_functions.c
creative/components/uart_terminal/: command_registration.c  uart_terminal.c  uart_terminal.h
creative/main/: CMakeLists.txt  main.c  main.h
t00/: CMakeLists.txt
t00/components/custom_error_functions/: error_functions.c
t00/main/: CMakeLists.txt  main.c  main.h
t01/: CMakeLists.txt
t01/components/uart_terminal/: CMakeLists.txt  command_registration.c  parse_command_line.c  parse_uart_event.c  uart_terminal.c  uart_terminal.h
t01/main/: CMakeLists.txt  buffer_functions.c  command_registration.c  led_functions.c  line_functions.c  lst_functions.c  main.c  main.h  parse_command.c  parse_command_line.c  parse_uart_buffer.c  parse_uart_event.c  search_command.c  string_parsing.c
t02/: CMakeLists.txt
t02/main/: CMakeLists.txt  main.c  main.h
t03/: CMakeLists.txt
t03/main/: CMakeLists.txt  main.c  main.h
t04/: CMakeLists.txt
t04/main/: CMakeLists.txt  main.c  main.h
(+66 files in other folders)
